--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <form>
             <input type="text" placeholder="Enter your name" class="input name" required>
             <input type="email" placeholder="Enter email address" class="input email" required>
-            <input type="text" placeholder="Which track are you interested in? " class="input track" required>
+            <input type="text" placeholder="Which track are you interested in? " class="input track" required><br>
 
             <textarea name="message" id="" cols="50" rows="7" placeholder="Message"></textarea>
             <button type="submit">SUBMIT</button>
