--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="details">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, est?</h2>
+            <h2>You are welcomed to join and engge in our health talk on 2/12/23.</h2>
 <img src="images/b2 (2).jpeg" alt="Murkomen Basil">
                         
             <p><b>Speaker&nbsp;&nbsp;:</b> Dr. Basil Murkomen</p>
@@ -37,7 +37,7 @@
             <form>
             <input type="text" placeholder="Enter your name" class="input name" required>
             <input type="email" placeholder="Enter email address" class="input email" required>
-            <input type="text" placeholder="Which track are you interested in? " class="input track" required><br>
+            <input type="text" placeholder="Which topic are you interested in? " class="input track" required><br>
 
             <textarea name="message" id="" cols="50" rows="7" placeholder="Message"></textarea>
             <button type="submit">SUBMIT</button>
