--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="cardside">
             <form>
-                <h3 align="center"><u>TO RSVP:</u></h3>
+                <h3  class="rsvp"><u>TO RSVP:</u></h3>
             <input type="text" placeholder="Enter your name" class="input name" required>
             <input type="email" placeholder="Enter email address" class="input email" required>
             <input type="text" placeholder="Which topic are you interested in? " class="input track" required><br>
