--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="details">
-            <h2>Hi there👋...You're welcomed to join and engage in our health talk on the 2<sup>nd</sup> of December 2023.</h2>
+            <h2>Hi there👋 ... You're welcomed to join and engage in our health talk on the 2<sup>nd</sup> of December 2023.</h2>
 <img src="images/b2 (2).jpeg" alt="Murkomen Basil">
                         
             <p><b>Speaker&nbsp;&nbsp;:</b> Dr. Basil Murkomen</p>
@@ -35,7 +35,7 @@
         </div>
         <div class="cardside">
             <form>
-                <h3  class="rsvp"><u>TO RSVP:</u></h3>
+                <h3  class="rsvp"><u>TO REGISTER :</u></h3>
             <input type="text" placeholder="Enter your name" class="input name" required>
             <input type="email" placeholder="Enter email address" class="input email" required>
             <input type="text" placeholder="Which topic are you interested in? " class="input track" required><br>
