--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="details">
-            <h2>Hi there👋 ... You're invited to join and engage in our <b>health talk </b> on the 2<sup>nd</sup> of December 2023.</h2>
+            <h2>Hi there👋 ... You're invited to join and engage in our <b> <u>health talk</u></b> on the 2<sup>nd</sup> of December 2023.</h2>
 <img src="images/b2 (2).jpeg" alt="Murkomen Basil">
                         
             <p><b>Speaker&nbsp;&nbsp;:</b> Dr. Basil Murkomen</p>
